--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: PoliValidate
+Package: poliprep
 Type: Package
 Title: For Processing and Validating Various Types of GPEI Data
 Version: 0.1.0
@@ -11,8 +11,8 @@ Authors@R: c(
 Description: A package by the Polio data team at `WHO AFRO`, designed to support 
             users with access to GPEI data in processing and validation.
 License: CC BY 4.0
-URL: https://github.com/WorldHealthOrganization/PolioValidate
-BugReports: https://github.com/WorldHealthOrganization/PolioValidate/issues
+URL: https://github.com/WorldHealthOrganization/poliprep
+BugReports: https://github.com/WorldHealthOrganization/poliprep/issues
 Depends:
     R (>= 3.5.0)
 Config/testthat/edition: 3
