--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,10 +20,19 @@ Depends:
   R (>= 3.5.0)
 Imports:
   rio, 
-  sf
+  cli,
+  dplyr,
+  tidyr,
+  sf,
+  rlang,
+  stringr
 Suggests: 
   testthat,
-  withr
+  withr,
+  stringdist,
+  epiCleanr,
+  crayon,
+  glue
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
