--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,3 +48,8 @@ jobs:
         with:
           upload-snapshots: true
           build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
+      - name: Upload coverage reports to Codecov 
+        uses: codecov/codecov-action@v4.0.1 
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} 
+          slug: WorldHealthOrganization/poliprep
