--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(get_ona_data)
 export(handle_file_save)
 export(handle_user_interaction)
 export(prep_geonames)
+export(prep_match_datatypes)
+export(prep_match_names)
 export(read)
 export(save)
 importFrom(cli,cli_alert_warning)
