Added a new function to get ONA data endpoints

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(get_ona_data)
 export(prep_geonames)
 export(prep_match_datatypes)
 export(prep_match_names)
+export(prep_ona_data_endpoints)
 export(read)
 export(save)
 importFrom(cli,cli_alert_warning)
