:star: functionality to automate the ONA data update

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,11 @@ Imports:
   httpcode,
   tibble,
   lubridate,
-  pbmcapply
+  pbmcapply,
+  doFuture, 
+  foreach, 
+  future,
+  progressr
 Suggests: 
   testthat,
   withr,
