--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,13 @@ export(generate_urls)
 export(get_multi_ona_data)
 export(get_ona_data)
 export(get_paginated_data)
+export(get_updated_ona_data)
 export(prep_geonames)
 export(prep_match_datatypes)
 export(prep_match_names)
 export(prep_ona_data_endpoints)
 export(read)
 export(save)
-export(update_ona_data)
 import(doFuture)
 import(dplyr)
 import(foreach)
