--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ import(future)
 importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_h2)
 importFrom(cli,cli_text)
+importFrom(foreach,"%dopar%")
 importFrom(progressr,handlers)
 importFrom(progressr,progressor)
 importFrom(progressr,with_progress)
