Major improvements to prep_geonames: enhanced flexibility, added validations, and non-interactivity support
This commit introduces significant enhancements to the `prep_geonames` function, increasing its flexibility, robustness, and usability in both interactive and non-interactive contexts. Key changes include the ability to clean any combination of geo columns (level0, level1, level2) without requiring all levels, the addition of numerous validations, and the inclusion of a non-interactive mode for script automation. Additionally, improvements have been made to handle large RDS files efficiently in `save` and `read` functions.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,10 +35,13 @@ Imports:
   doFuture, 
   foreach, 
   future,
-  progressr,
+  purrr,
+  archive,
   doParallel
 Suggests: 
   testthat,
+  progressr,
+  janitor,
   withr,
   stringdist,
   epiCleanr,
