--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,16 +37,17 @@ Imports:
   future,
   purrr,
   archive,
-  doParallel
+  doParallel,
+  RODBC
 Suggests: 
-  testthat,
-  progressr,
-  janitor,
-  withr,
-  stringdist,
-  epiCleanr,
-  crayon,
-  glue
+    testthat,
+    progressr,
+    janitor,
+    withr,
+    stringdist,
+    epiCleanr,
+    crayon,
+    glue
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
