--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,8 @@ Suggests:
     epiCleanr,
     crayon,
     glue,
-    stringi
+    stringi,
+    yaml
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
