--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,8 @@ Suggests:
     crayon,
     glue,
     stringi,
-    yaml
+    yaml,
+    geosphere
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
