Include new function for validating POLIS data :star2:

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,7 +50,10 @@ Suggests:
     glue,
     stringi,
     httpcode,
-    yaml
+    yaml,
+    scales,
+    webshot,
+    gt
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
