Add new functionality to validate AFRO raw data :star2:

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,11 @@ Suggests:
     yaml,
     scales,
     webshot,
-    gt
+    gt,
+    parzer,
+    readr,
+    zoo,
+    ggplot2
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
