--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(create_gt_table)
 export(create_summary_by_group)
 export(create_summary_table)
 export(detect_date_format)
+export(export_and_read_mdb)
 export(find_nearest_coord)
 export(get_missing_ids)
 export(get_multi_ona_data)
@@ -24,7 +25,9 @@ export(prep_match_names)
 export(prep_mdb_table_extract)
 export(read)
 export(save)
+export(summarize_validation_results)
 export(validate_admin_hierarchy)
+export(validate_afro)
 export(validate_date)
 export(validate_dates)
 export(validate_polis)
