Add functionality to validate POLIS data snapshots :star2:

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(validate_afro)
 export(validate_date)
 export(validate_dates)
 export(validate_polis)
+export(validate_polis_snapshots)
 import(doFuture)
 import(dplyr)
 import(foreach)
@@ -38,11 +39,16 @@ import(future)
 importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_h2)
 importFrom(cli,cli_text)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(foreach,"%dopar%")
 importFrom(geosphere,distHaversine)
+importFrom(lubridate,year)
+importFrom(purrr,map_dfr)
 importFrom(rio,import)
 importFrom(rio,install_formats)
 importFrom(rlang,":=")
+importFrom(rlang,sym)
 importFrom(sf,read_sf)
 importFrom(stats,setNames)
 importFrom(tools,file_ext)
