Improve prep_geonames console interactions :arrow_up:

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ import(dplyr)
 import(foreach)
 import(future)
 importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_h1)
 importFrom(cli,cli_h2)
 importFrom(cli,cli_text)
 importFrom(dplyr,filter)
