Add new function to get new detections table and report :star2:
Co-Authored-By: lizkrowlucal <13275133+lizkrowlucal@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(create_summary_table)
 export(detect_date_format)
 export(export_and_read_mdb)
 export(find_nearest_coord)
+export(format_date_ord)
 export(get_missing_ids)
 export(get_multi_ona_data)
 export(get_ona_data)
@@ -24,6 +25,7 @@ export(prep_geonames)
 export(prep_match_datatypes)
 export(prep_match_names)
 export(prep_mdb_table_extract)
+export(prep_new_detections_report)
 export(read)
 export(save)
 export(summarize_validation_results)
