--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(check_data)
 export(check_land_water)
 export(check_leap_issue)
 export(check_missing)
-export(compare_polis_afp_snapshots)
+export(compare_polis_snapshots)
 export(correct_flipped_geo_coords)
 export(create_gt_table)
 export(create_summary_by_group)
