Improve get_ona code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(autoparse_dates)
 export(big_mark)
 export(calculate_distance)
+export(categorize_biannual)
 export(check_coords)
 export(check_data)
 export(check_land_water)
@@ -27,6 +28,7 @@ export(prep_match_datatypes)
 export(prep_match_names)
 export(prep_mdb_table_extract)
 export(prep_new_detections_table)
+export(prep_ona_data_endpoints)
 export(read)
 export(save)
 export(summarize_validation_results)
