--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(check_land_water)
 export(check_leap_issue)
 export(check_missing)
 export(compare_polis_snapshots)
+export(compress_png_files)
 export(correct_flipped_geo_coords)
 export(create_gt_table)
 export(create_summary_by_group)
