Update validate_data to take any data and not only AFRO data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(check_data)
 export(check_land_water)
 export(check_leap_issue)
 export(check_missing)
-export(compare_polis_snapshots)
 export(compress_png_files)
 export(correct_flipped_geo_coords)
 export(create_gt_table)
@@ -33,9 +32,8 @@ export(prep_new_detections_table)
 export(prep_ona_data_endpoints)
 export(read)
 export(save)
-export(summarize_validation_results)
 export(validate_admin_hierarchy)
-export(validate_afro)
+export(validate_data)
 export(validate_date)
 export(validate_dates)
 export(validate_polis)
