--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,7 +67,8 @@ Suggests:
     ggplot2,
     optout,
     progress,
-    filelock
+    filelock,
+    lifecycle
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
