--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(format_date_ord)
 export(get_missing_ids)
 export(get_ona_data)
 export(get_updated_ona_data)
+export(init_folders)
 export(join_and_check_mismatches)
 export(prep_geonames)
 export(prep_match_datatypes)
