--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,7 +50,6 @@ Suggests:
     janitor,
     withr,
     stringdist,
-    epiCleanr,
     crayon,
     glue,
     stringi,
@@ -69,7 +68,8 @@ Suggests:
     progress,
     filelock,
     lifecycle,
-    here
+    here,
+    remotes
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
