--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,13 +17,13 @@ export(create_gt_table)
 export(create_summary_by_group)
 export(create_summary_table)
 export(detect_date_format)
-export(export_and_read_mdb)
 export(find_nearest_coord)
 export(format_date_ord)
 export(get_missing_ids)
 export(get_ona_data)
 export(get_updated_ona_data)
 export(init_folders)
+export(install_suggested_packages)
 export(join_and_check_mismatches)
 export(prep_geonames)
 export(prep_match_datatypes)
