--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(check_data)
 export(check_land_water)
 export(check_leap_issue)
 export(check_missing)
+export(check_tables_availability)
 export(compress_png_files)
+export(construct_api_url)
 export(correct_flipped_geo_coords)
 export(create_gt_table)
 export(create_summary_by_group)
@@ -19,11 +21,14 @@ export(create_summary_table)
 export(detect_date_format)
 export(find_nearest_coord)
 export(format_date_ord)
+export(get_api_date_suffix)
 export(get_missing_ids)
 export(get_ona_data)
+export(get_polis_api_data)
 export(get_updated_ona_data)
 export(init_folders)
 export(install_suggested_packages)
+export(iterative_api_call)
 export(join_and_check_mismatches)
 export(prep_geonames)
 export(prep_match_datatypes)
@@ -31,14 +36,18 @@ export(prep_match_names)
 export(prep_mdb_table_extract)
 export(prep_new_detections_table)
 export(prep_ona_data_endpoints)
+export(process_api_response)
 export(read)
 export(save)
+export(save_polis_data)
+export(update_polis_api_data)
 export(validate_admin_hierarchy)
 export(validate_data)
 export(validate_date)
 export(validate_dates)
 export(validate_polis)
 export(validate_polis_snapshots)
+export(write_log_file_api)
 import(doFuture)
 import(dplyr)
 import(foreach)
