Refactor optimize_png function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ export(check_land_water)
 export(check_leap_issue)
 export(check_missing)
 export(check_tables_availability)
-export(compress_png_files)
 export(construct_api_url)
 export(correct_flipped_geo_coords)
 export(create_gt_table)
@@ -30,6 +29,7 @@ export(init_folders)
 export(install_suggested_packages)
 export(iterative_api_call)
 export(join_and_check_mismatches)
+export(optimize_png)
 export(prep_geonames)
 export(prep_match_datatypes)
 export(prep_match_names)
