refactor compress_png function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(check_land_water)
 export(check_leap_issue)
 export(check_missing)
 export(check_tables_availability)
+export(compress_png)
+export(compression_stats)
 export(construct_api_url)
 export(correct_flipped_geo_coords)
 export(create_gt_table)
@@ -19,6 +21,7 @@ export(create_summary_by_group)
 export(create_summary_table)
 export(detect_date_format)
 export(find_nearest_coord)
+export(find_pngquant)
 export(format_date_ord)
 export(get_api_date_suffix)
 export(get_missing_ids)
@@ -29,7 +32,6 @@ export(init_folders)
 export(install_suggested_packages)
 export(iterative_api_call)
 export(join_and_check_mismatches)
-export(optimize_png)
 export(prep_geonames)
 export(prep_match_datatypes)
 export(prep_match_names)
