❇ Add two new functions to download worldpop rasters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,9 @@ export(correct_flipped_geo_coords)
 export(create_gt_table)
 export(create_summary_by_group)
 export(create_summary_table)
+export(ddownload_worldpop_age_band)
 export(detect_date_format)
+export(download_worldpop)
 export(find_nearest_coord)
 export(find_pngquant)
 export(format_date_ord)
