--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,7 +71,8 @@ Suggests:
     filelock,
     lifecycle,
     here,
-    remotes
+    remotes,
+    terra
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
